test/sema/member_expr_assignment.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S { x: int }
struct S2 { x: int }

fn main() -> void {
  let s = S { x: 0 };
  let s2 = S2 { x: 0 };

  s.x = 1;
  s2.x = s2;
  // CHECK: [[# @LINE - 1 ]]:10: error: assigned value type 'S2' doesn't match variable type 'int'
}
